# travel-itinerary-planner-crewai

./: .env  pyproject.toml  requirements.txt  streamlit_app.py
src/ai_travel_itinerary_planner/: crew.py  main.py
src/ai_travel_itinerary_planner/config/: agents.yaml  tasks.yaml
