[project]
name = "ai_travel_itinerary_planner"
version = "0.1.0"
description = "ai_travel_itinerary_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
ai_travel_itinerary_planner = "ai_travel_itinerary_planner.main:run"
run_crew = "ai_travel_itinerary_planner.main:run"
train = "ai_travel_itinerary_planner.main:train"
replay = "ai_travel_itinerary_planner.main:replay"
test = "ai_travel_itinerary_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
